# bookstore

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  request_auth_token_example.py  requirements.txt  vercel.json
.github/workflows/: python-anywhere-deploy.yml  pythonanywhere-deploy.yml
.vercel/: project.json
bookStore/: settings.py
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/tests/test_viewsets/: test_order_viewset.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/tests/test_viewsets/: test_product_viewset.py
