[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Matheus Aveiro <matheusaveirofagundes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.2.9"
psycopg2 = "*"
djangorestframework = "^3.14.0"
django-extensions = "^3.1.3"
psycopg2-binary = "^2.9.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
gunicorn = "^20.1.0"
whitenoise = "^5.3.0"
gitpython = "^3.1.37"
django-debug-toolbar = "^4.4.5"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
factory-boy = "^3.2.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
